# CasperOPs

./: .env.example  .gitignore  .graphifyignore  README.md  docker-compose.yml  start-all.sh  stop-all.sh
AI_workflow_backend/: main.py
BlockOPS/: .gitignore  README.md  start-all.sh  stop-all.sh
backend/: .dockerignore  .env.example  AGENT_REGISTRY_FILECOIN_AUDIT_README.md  Dockerfile  app.js  fly.toml  package-lock.json  package.json  server.js
contract/: Cargo.toml  DEPLOYMENT.md  Odra.toml  llms-common.txt  llms.txt  package-lock.json
contract/scripts/: build.sh  deploy.js
contract/src/: compliance.rs  lib.rs  message_board.rs  reputation.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEV_SETUP.md  LAUNCH_CHECKLIST.md  OPERATIONS.md  PERFORMANCE.md  PHASE28_RUNBOOK.md  PUBLIC_API.md  RUNBOOK.md  STATUS.md  TROUBLESHOOTING.md  casper-ecosystem-toolkit.md  demo-script.md  deploy-checklist.md  env-variables.md  hackathon-alignment-proposals.md  hackathon-pitch-deck-technical-guide.md  one-pager.md  pitch-deck.md  project-idea.md  security-audit.md  task.md  tech-stack-architecture.md  testnet-validation.md  unified-agentic-scenarios.md  x402.md
frontend/: DATABASE_SCHEMA.sql  DATABASE_SETUP_GUIDE.md  Dockerfile  LIT_PROTOCOL_SETUP.md  MIGRATION_FIX.sql  README.md  SUPABASE_SETUP.sql  X402_PAYMENT_SCHEMA.sql  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  manifest.json
scripts/: deploy-mcp.sh  (+13 more)
(+394 files in other folders)
