[package]
name = "blockops_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.8.1", features = [], default-features = false }
casper-event-standard = "0.7"

[dev-dependencies]
odra-test = { version = "2.8.1", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.1", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.1", features = [], default-features = false }
odra-cli = { version = "2.8.1", features = [], default-features = false }

[[bin]]
name = "blockops_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "blockops_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release] 
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"